updated py & added docker file

--- a/src/preparation/config_prep.yaml
+++ b/src/preparation/config_prep.yaml
@@ -3,8 +3,6 @@
 info:
     base_path: /Users/Avinash/Documents/datascience/dataops/
 
-database:
-    schema: opencmsdb
-
 rds_attributes:
     tf_path: /tf/dev/terraform.tfstate
+    execution_timeout: 10800000
