--- a/src/preparation/config_prep.yaml
+++ b/src/preparation/config_prep.yaml
@@ -1,7 +1,7 @@
 # config file to load data to rds
 
 info:
-    base_path: /Users/Avinash/Documents/datascience/dataops/
+    base_path: /
 
 rds_attributes:
     tf_path: /tf/dev/terraform.tfstate
