corrected tf path - config.yaml to be removed later

--- a/src/preparation/config_prep.yaml
+++ b/src/preparation/config_prep.yaml
@@ -1,8 +1,8 @@
 # config file to load data to rds
-
+# not required may be removed
 info:
-    base_path: /
+    base_path:
 
 rds_attributes:
-    tf_path: /tf/dev/terraform.tfstate
+    tf_path: tf/dev/terraform.tfstate
     execution_timeout: 10800000
