--- a/docker/data_load/Dockerfile
+++ b/docker/data_load/Dockerfile
@@ -24,8 +24,10 @@ ENTRYPOINT conda install -y pip \
                             yaml==0.1.7 && \
            pip install awscli --upgrade \
                        mysql-connector-python && \
-           aws s3 cp s3://dataops-opencms/pgyr17_p011819.zip /dataops_opencms_data/data/raw/ && \
-           unzip /dataops_opencms_data/data/raw/pgyr17_p011819.zip && \
+           mkdir data && mkdir data/raw && mkdir data/raw/pgyr17_p011819 && \
+           aws s3 cp s3://dataops-opencms/pgyr17_p011819.zip data/raw/ && \
+           unzip data/raw/pgyr17_p011819.zip -d data/raw/pgyr17_p011819/ && \
            sh pipeline/create_infra.sh && \
-           aws s3 cp /dataops_opencms_data/tf/dev/terraform.tfstate s3://dataops-opencms/terraform.tfstate && \
+           aws s3 cp tf/dev/terraform.tfstate s3://dataops-opencms/terraform.tfstate && \
+           ls data/raw/ && \
            sh pipeline/data_ingestion.sh
