changed server type, ' '

--- a/docker/data_load/Dockerfile
+++ b/docker/data_load/Dockerfile
@@ -28,6 +28,7 @@ ENTRYPOINT conda install -y pip \
            aws s3 cp s3://dataops-opencms/pgyr17_p011819.zip data/raw/ && \
            unzip data/raw/pgyr17_p011819.zip -d data/raw/pgyr17_p011819/ && \
            rm -r data/raw/pgyr17_p011819/general_payments.csv && \
+           rm -r data/raw/pgyr17_p011819/research_payments.csv && \
            sh pipeline/create_infra.sh && \
            aws s3 cp tf/dev/terraform.tfstate s3://dataops-opencms/terraform.tfstate && \
            ls data/raw/ && \
