--- a/docker/data_load/Dockerfile
+++ b/docker/data_load/Dockerfile
@@ -33,4 +33,4 @@ ENTRYPOINT conda install -y pip \
            aws s3 cp tf/dev/terraform.tfstate s3://dataops-opencms/terraform.tfstate && \
            ls data/raw/ && \
            sh pipeline/data_ingestion.sh && \
-           aws s3 cp src/preparation/output_load s3://dataops-opencms/output_load
+           aws s3 cp src/preparation/output_load s3://dataops-opencms/output_load --recursive
