--- a/docker/data_load/Dockerfile
+++ b/docker/data_load/Dockerfile
@@ -32,6 +32,6 @@ ENTRYPOINT conda update -y --all && \
            unzip data/raw/pgyr17_p011819.zip -d data/raw/pgyr17_p011819/ && \
            ls data/raw/pgyr17_p011819/ && \
            sh pipeline/create_infra.sh && \
-           aws s3 cp tf/dev/terraform.tfstate s3://dataops-opencms/terraform.tfstate && \
+           aws s3 cp tf/dev/load/terraform.tfstate s3://dataops-opencms/terraform.tfstate && \
            sh pipeline/data_ingestion.sh && \
            aws s3 cp src/preparation/output_load s3://dataops-opencms/output_load --recursive
